--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
       "eslint:recommended"
     ],
     "rules": {
-      "no-console":0
+      "no-console":0,
+      "vue/no-unused-components":0
     },
     "parserOptions": {
       "parser": "babel-eslint"
